# OpenWIO

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  license_checker.py
.github/workflows/: static_code_analysis.yaml
concepts/: openwio_draft.yaml
concepts/resources/example_workflows/tools/: calc_msa_and_dist_mat.cwl  generate_tree_and_visualize.cwl
concepts/resources/example_workflows/workflows/: msa_group_compare.cwl
openwio/: __init__.py  __main__.py
