# Copyright 2021 Kersten Henrik Breuer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = openwio
version = attr: openwio.__version__
description = OpenWIO - Open Workflow Input/Output specification.
url = https://github.com/KerstenBreuer/OpenWIO
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Kersten Breuer
author_email = kersten-breuer@outlook.com
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Documentation

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic>=1.0
    PyYAML>=5.1
    typer>=0.3.0
python_requires = >= 3.7

[options.entry_points]
# Please adapt to package name
console_scripts =
    openwio = openwio.__main__:run_cli

[options.extras_require]
# Please adapt to package name
dev =
    pytest
    pytest-cov
    mypy
    pylint
    flake8
    black
    bandit
    pre-commit
all =
    %(dev)s


[options.packages.find]
exclude = tests
